Add tests for repo/container, account, jobs, validation, mappers, sources+formats
- repo/container: 13 new test classes (~77 tests)
- account/service: 9 new test classes + extensions (~48 tests) incl. testcontainers ITs
- jobs/service: 11 new test classes (~68 tests) incl. relay/worker/corruption coverage
- protobuf/validation: 19 new test classes (~112 tests) + extra.proto fixture
- mapper core/cel/metadata: ~124 tests
- core/sources + core/formats: ~83 tests

Bug fixes in main code (LinkedOptionsRepair), each with a regression test:
- options on proto2 extension field declarations crashed compilation
  (extension fields are linked onto the extendee but encoded in its
  extension list; the field-options repair loop looked them up in field)
- nested extend declarations silently vanished from compiled descriptors
  (Wire's SchemaEncoder drops them; the model/encoder existence check now
  runs for every declared extension field, options or not)